Fix z-index of options

--- a/static/zwolle/app/src/interfacing/interface.css
+++ b/static/zwolle/app/src/interfacing/interface.css
@@ -19,6 +19,7 @@ fieldset {
 .interface .interface-opt {
     display: flex;
     justify-content: flex-end;
+    z-index: 1;
 }
 
 .interface .interface-opt .btn {
@@ -27,6 +28,7 @@ fieldset {
 
 .interface .box-cols .box-cols-opt {
     text-align: right;
+    z-index: 1;
 }
 
 .interface .box-cols-opt .btn {
@@ -35,6 +37,7 @@ fieldset {
 
 .interface .box-tabs .box-tabs-opt {
     padding-top: 10px;
+    z-index: 1;
 }
 
 .interface .box-tabs-opt .btn {
@@ -43,6 +46,7 @@ fieldset {
 
 .interface .box-panels .box-panels-opt {
     margin-top: -3px;
+    z-index: 1;
 }
 
 .interface .box-panels-opt .btn {
@@ -57,6 +61,7 @@ fieldset {
     display: block;
     padding: 5px 8px;
     font-size: 12px;
+    z-index: 1;
     /*
     border-left: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
